--- a/HelloWorldApp/HelloWorldPagesApp/templates/HelloWorldPagesApp/answer.html
+++ b/HelloWorldApp/HelloWorldPagesApp/templates/HelloWorldPagesApp/answer.html
@@ -5,7 +5,7 @@
     <title>Greeting Page for {{ name }}</title>
 </head>
 <body>
-Hello {{ name }}, your answer was {{ answer }}
+Hello {{ name }}, your answer was {{ answer }}/{{ yesno }}
 <p><a href="/{{ name }}">Go back</a></p>
 </body>
 </html>
