--- a/HelloWorldApp/HelloWorldPagesApp/templates/HelloWorldPagesApp/answer_with_template.html
+++ b/HelloWorldApp/HelloWorldPagesApp/templates/HelloWorldPagesApp/answer_with_template.html
@@ -1,8 +1,8 @@
 {% extends "HelloWorldPagesApp/base.html" %}
 
-{% block content %}
+{% block content1 %}
 
-Hello {{ name }}, your answer was {{ answer }}/{{ yesno }}
+<p>your answer was {{ answer }}/{{ yesno }}</p>
 <p><a href="/{{ name }}">Go back</a></p>
 
 {% endblock %}
