--- a/HelloWorldApp/HelloWorldPagesApp/static/HelloWorldPagesApp/style.css
+++ b/HelloWorldApp/HelloWorldPagesApp/static/HelloWorldPagesApp/style.css
@@ -1,5 +1,5 @@
 body {
-    color: purple;
+    color: green;
     font-family: sans-serif;
     font-size: 20pt;
 }
@@ -7,9 +7,6 @@ body {
 .example1 {
     font-size: 10pt;
     color: red;
-    position: absolute;
-    right: 0px;
-    height: 100px;
     border-color: green;
     border-style: solid;
 }
