--- a/HelloWorldApp/HelloWorldPagesApp/templates/HelloWorldPagesApp/base.html
+++ b/HelloWorldApp/HelloWorldPagesApp/templates/HelloWorldPagesApp/base.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="{% static 'HelloWorldPagesApp/style.css' %}">
 </head>
 <body>
-{% block content %} Nothing is here {% endblock %}
+<h1>Hello {{ name }}</h1>
+{% block content1 %} Nothing is here {% endblock %}
+<p>Footer</p>
 </body>
 </html>
